# HoneycrispEngine

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.md  Test.java  TestClient.code-workspace  build.bat  build.py  builddep.bat  buildrun.bat  gen_cmake.bat  gen_premake.bat  imgui.ini  linkrun.bat  premake5.lua  run.bat  update_cmake.py  vertices_log.txt
Client/src/: CMakeLists.txt  GameEntry.cpp  GameInstance.h
Client/src/scenes/: CMakeLists.txt  DefaultScene.cpp  DefaultSceneTwo.cpp  DefaultSceneTwo.h  TemplateScene.h
Engine/: CMakeLists.txt
Engine/api/components/: DrawData.h  Opacity.h
Engine/api/core/: Assert.h  Debug.h  Defines.h  FileSystem.h  Logging.h  Random.h  Terminate.h  Timer.h  binary_insert_delete.h  constants.h
Engine/api/ecs/: ECSManager.h
Engine/api/game/: GameEntry.h  GameInstance.h
Engine/api/graphics/: AxesCrosshair.h  Billboard.h  Camera.h  Cube.h  Cubemap.h  DepthPassCamera.h  DirectionalLight.h  ILight.h  Material.h  Mesh.h  Model.h  PointLight.h  SpotLight.h  TextureAtlas.h
Engine/api/managers/: ImGuiManager.h  ShaderManager.h
Engine/api/pch/: hncrsp_pch.cpp  hncrsp_pch.h
Engine/api/scene/: Renderable.h  Scene.h  SceneRenderObj.h
Engine/api/systems/: Renderer.h  Systems.h
Engine/core/: Assert.h  Constants.h  Defines.h  Types.h
Engine/editor/: AppWindow.cpp  CMakeLists.txt  Camera.cpp  Camera.h  GLFWCallbacks.cpp  GLFWCallbacks.h  Material.cpp  Material.h  Scene.h  Transform.cpp  Transform.h
Engine/renderer/: AppWindow.cpp  AppWindow.h  CMakeLists.txt  Renderer.cpp  Renderer.h
Engine/renderer/meshes/: Model.cpp  Model.h  Quad.cpp  Quad.h
Engine/renderer/shaders/: default.frag  forward.frag  screen_quad.frag  screen_quad.vert
Engine/resources/shaders/: AdjustableColor.frag  BlinnPhong.frag  CalculateNormal.geom  Cubemap.vert  Explode.geom  Normal.geom  Reflect.frag  Template.geom
Engine/shaders/: default.frag  default.vert
Engine/src/: Application.cpp  Application.h  CMakeLists.txt  Callbacks.cpp  Callbacks.h  GameInstance.cpp  GameLoop.cpp  GameLoop.h  RenderContext.cpp  RenderContext.h  Scene.cpp  WindowHandler.cpp  WindowHandler.h
Engine/src/components/: CMakeLists.txt  Transform.cpp
Engine/util/: Path.cpp
TestClient/src/: CMakeLists.txt  GameEntry.cpp  Setup.cpp  Setup.h  main.cpp
dependencies/: CMakeLists.txt
engine/: CMakeLists.txt
engine/core/: Constants.h
engine/editor/: AppWindow.cpp  AppWindow.h  CMakeLists.txt  GLFWCallbacks.h  Scene.h
engine/renderer/: CMakeLists.txt  Camera.cpp  Camera.h  DeferredRenderer.cpp  DeferredRenderer.h  ForwardRenderer.cpp  ForwardRenderer.h  Material.cpp  PostprocessQueue.cpp  PostprocessQueue.h  Renderer.cpp  Renderer.h  Transform.cpp  Transform.h
engine/util/: CMakeLists.txt  Path.cpp  Path.h
src/: Application.cpp  Application.h  CMakeLists.txt  Callbacks.cpp  Callbacks.h  Camera.cpp  Camera.h  Cube.cpp  Cube.h  Cubemap.cpp  Cubemap.h  Debug.cpp  Debug.h  DirectionalLight.cpp  DirectionalLight.h  ElementBuffer.cpp  ElementBuffer.h  GameLoop.cpp  GameLoop.h  ImGuiController.cpp  ImGuiController.h  Light.cpp  Light.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  NonRenderable.h  OGLWrapper.cpp  OGLWrapper.h  Object.h  PointLight.cpp  PointLight.h  Renderable.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  SceneRenderObj.cpp  SceneRenderObj.h  (+15 more)
src/components/: CMakeLists.txt  DrawData.h  MeshData.h  Opacity.h  Transform.cpp  Transform.h
src/core/: ElementBuffer.cpp  ElementBuffer.h  GLFWContext.cpp  GLFWContext.h  ImGuiManager.cpp  ImGuiManager.h  Material.cpp  Material.h  RenderContext.cpp  RenderContext.h  SceneManager.cpp  SceneManager.h  Shader.cpp  Shader.h  ShaderManager.cpp  ShaderManager.h  Texture.cpp  Texture.h  Texture2DManager.cpp  Texture2DManager.h  UniformBuffer.cpp  UniformBuffer.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
src/ecs/: CMakeLists.txt  ComponentArray.h  ComponentCounter.h  ComponentManager.h  ECSManager.cpp  ECSManager.h  ECSTypes.h  EntityManager.cpp  EntityManager.h  System.h  SystemManager.cpp  SystemManager.h
src/gizmos/: DirectionGuide.h
src/graphics/: AxesCrosshair.cpp  AxesCrosshair.h  Billboard.cpp  Billboard.h  CMakeLists.txt  Camera.cpp  Camera.h  Cube.cpp  Cube.h  Cubemap.cpp  Cubemap.h  DepthPassCamera.cpp  DepthPassCamera.h  DirectionalLight.cpp  DirectionalLight.h  Light.cpp  Light.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  PointLight.cpp  PointLight.h  PostProcessingQueue.cpp  PostProcessingQueue.h  SpotLight.cpp  SpotLight.h  TextureAtlas.h
src/managers/: CMakeLists.txt  GLFWContext.cpp  GLFWContext.h  ImGuiManager.cpp  ImGuiManager.h  PostprocessingManager.cpp  PostprocessingManager.h  RenderContext.cpp  RenderContext.h  SceneManager.cpp  SceneManager.h  ShaderManager.cpp  ShaderManager.h  Texture2DManager.cpp  Texture2DManager.h  WindowHandler.cpp  WindowHandler.h
src/opengl/: Framebuffer.cpp  Framebuffer.h  Material.cpp  Shader.cpp  Shader.h  Texture2D.cpp  Texture2D.h  TextureAtlas.cpp  UniformBuffer.h  VertexArray.cpp  VertexArray.h  VertexBuffer.h
src/pch/: hncrsp_pch.h  pch.h
src/renderer/: ElementBuffer.cpp  ElementBuffer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Texture2D.cpp  Texture2D.h  UniformBuffer.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
src/scenes/: CMakeLists.txt  DefaultScene.cpp  DefaultScene.h  DefaultSceneTwo.cpp  DefaultSceneTwo.h  SpaceScene.cpp  SpaceScene.h  TemplateScene.cpp  TemplateScene.h
src/serialize/: CMakeLists.txt  ImageSerializer.cpp  ImageSerializer.h  ModelSerializer.cpp  ModelSerializer.h  Serializer.h
src/systems/: CMakeLists.txt  Renderer.cpp  Renderer.h
src/types/: Singleton.h  Transform.cpp  Transform.h  types_index.h
src/utils/: Assert.cpp  Assert.h  CMakeLists.txt  Command.h  Debug.cpp  Debug.h  Defines.h  ErrorTickBomb.h  FileSystem.cpp  FileSystem.h  Logging.cpp  Logging.h  Random.h  Signal.h  Terminate.cpp  Terminate.h  Timer.cpp  Timer.h  TracyProfile.h  binary_insert_delete.h  json_util.h  utils.cpp  utils.h
(+266 files in other folders)
